{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 132,
  "lineage": "8705208e-4777-5b90-e455-7407724f7b4d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:060795946302:security-group/sg-097f6bc44c35bf8f0",
            "description": "Allow PostgreSQL access from web app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-097f6bc44c35bf8f0",
            "ingress": [],
            "name": "postgres_sg",
            "name_prefix": "",
            "owner_id": "060795946302",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02153249c434071a2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prj_03_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:060795946302:security-group/sg-00d4768a257998697",
            "description": "Allow TCP 5000 for web app",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d4768a257998697",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic on port 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "prj_03_sg",
            "name_prefix": "",
            "owner_id": "060795946302",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prj_03_sg"
            },
            "tags_all": {
              "Name": "prj_03_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02153249c434071a2"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "postgres_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-4109844195",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-097f6bc44c35bf8f0",
            "security_group_rule_id": "sgr-02188410f6b3e20e3",
            "self": false,
            "source_security_group_id": "sg-00d4768a257998697",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.postgres_sg",
            "aws_security_group.prj_03_sg"
          ]
        }
      ]
    }
  ]
}